syntax = "proto3";

package opinion;

message Opinion {
    string id = 1;
    string asunto = 2;
    string autor = 3;
}
service OpinionServicio {
    rpc GetOpinion(GetOpinionRequest) returns (GetOpinionResponse);
    rpc PostOpinion(PostOpinionRequest) returns (PostOpinionResponse);
    rpc DeleteOpinion(DeleteOpinionRequest) returns (DeleteOpinionResponse);
}

// -- Get Opinion Messages types 
message GetOpinionRequest {
    string id = 1;
}

message GetOpinionResponse {
    Opinion opinion = 1;
}

// -- Post Opinion Message types
message PostOpinionRequest {
    Opinion opinion = 1;
}

message PostOpinionResponse {
    Opinion opinion = 1; 
}

// -- Delete Opinion Message types
message DeleteOpinionRequest {
    Opinion opinion = 1;
}

message DeleteOpinionResponse {
    string status = 1;
}